# tldr-project

./: .trivyignore  AI.md  README.md  index.html  ramp.md
.github/workflows/: ci.bak  ci.yml  scan-sample-images.yml
docs/: _config.yml  index.md
reports/: fixable-findings.json  grype-normalized.csv  grype-report.json  scan-times.csv  trivy-ci.json  trivy-normalized.csv  trivy-report.json
scripts/: compare.py  compare_all_scans.py  local_test_scan.sh  normalize_grype.py  normalize_trivy.py  policy-fail-critical.py
security/: grype.yml  trivy-ignore.rego  trivy.yml
site/: index.html
tldr-app/: .gitignore  Dockerfile  README.md  docker-compose.yml  llm  llm_client.py  main.py  pyproject.toml  requirements.txt
tldr-app-chart/: Chart.yaml  values.yaml
tldr-app-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  httproute.yaml  ingress.yaml  service.yaml
tldr-app/static/: index.html
tldr-app/tests/: main.py  test_generate.py  test_health.py
tldr-manifests/: tldr-application.yaml
